pom cleanup; get tests working again
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/weaver/trunk@1513670 13f79535-47bb-0310-9956-ffa450edef68